# image_captions

./: .gitignore  README.md  gpu_req.txt  pyproject.toml
gpt2/: tokeniser.py
model/frank/: baseline_model.py  decoder.py  demo_generator.py  generate.py  model.py  tapped_vit_b_16.py  train.py  train2.py
model/frank/data_utils/: data.py
sandbox/: gpt2_extraction.py
training/gpt2/: tokeniser.py
training/model/frank/: baseline_model.py  decoder.py  train.py
training/sandbox/: bes.py  training_batches.py
training/utils/: model_manager.py
training/val_utils/: test_img.py  wandb_utils.py
val_utils/: wandb_utils.py
