[tool.poetry]
name = "image-captions"
version = "0.1.0"
description = ""
authors = ["Askar Sulaimanov <askarkg12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
tqdm = "^4.67.0"
wandb = "^0.18.7"
torchvision = "^0.20.1"
matplotlib = "^3.9.2"
transformers = "^4.46.2"
torchtune = "^0.4.0"
torchao = "^0.6.1"
datasets = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
